z-index는 absolute position / fixed position에서 설정가능

--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -18,6 +18,7 @@
 
 #chat-screen .alt-header {
     top: 10px;
+    z-index: 1;
 }
 
 .main-chat {
